--- a/report/references.bib
+++ b/report/references.bib
@@ -71,3 +71,43 @@
   year={2018},
   publisher={Wiley Online Library}
 }
+
+@misc{Ryan,
+  author = {Ryan, K.},
+  year = {2020},
+  url = {https://towardsdatascience.com/stepwise-regression-tutorial-in-python-ebf7c782c922},
+  title = {Stepwise Regression Tutorial in Python}
+}
+
+
+@misc{PyTorch,
+  author = {PyTorch},
+  year = {2021},
+  url = {https://pytorch.org/docs/stable/index.html},
+  title = {Stepwise Regression Tutorial in Python}
+}
+
+@inproceedings{sundararajan2017axiomatic,
+  title={Axiomatic attribution for deep networks},
+  author={Sundararajan, Mukund and Taly, Ankur and Yan, Qiqi},
+  booktitle={International Conference on Machine Learning},
+  pages={3319--3328},
+  year={2017},
+  organization={PMLR}
+}
+
+@misc{patel2018two,
+  title={When two trends fuse: Pytorch and recommender systems},
+  author={Patel, M},
+  year={2018},
+  publisher={O’Reilly Media. https://www. oreilly. com/ideas/when-two-trends-fuse-pytorch~…}
+}
+
+@article{paszke2019pytorch,
+  title={Pytorch: An imperative style, high-performance deep learning library},
+  author={Paszke, Adam and Gross, Sam and Massa, Francisco and Lerer, Adam and Bradbury, James and Chanan, Gregory and Killeen, Trevor and Lin, Zeming and Gimelshein, Natalia and Antiga, Luca and others},
+  journal={Advances in neural information processing systems},
+  volume={32},
+  pages={8026--8037},
+  year={2019}
+}
