--- a/report/references.bib
+++ b/report/references.bib
@@ -111,3 +111,47 @@
   pages={8026--8037},
   year={2019}
 }
+
+
+@misc{epsg,
+  author = {Howard, Butler and Christopher, Schmidt and Dane, Springmeyer and Josh, Livni},
+  year = {2007},
+  url = {https://spatialreference.org/ref/epsg/wgs-84/},
+  title = {epsg projection 4326 - wgs 84}
+}
+
+@article{patro2015normalization,
+  title={Normalization: A preprocessing stage},
+  author={Patro, S and Sahu, Kishore Kumar},
+  journal={arXiv preprint arXiv:1503.06462},
+  year={2015}
+}
+
+@article{de2005tutorial,
+  title={A tutorial on the cross-entropy method},
+  author={De Boer, Pieter-Tjerk and Kroese, Dirk P and Mannor, Shie and Rubinstein, Reuven Y},
+  journal={Annals of operations research},
+  volume={134},
+  number={1},
+  pages={19--67},
+  year={2005},
+  publisher={Springer}
+}
+
+@article{walter2020oklahoma,
+  title={The Oklahoma geological survey statewide seismic network},
+  author={Walter, Jacob I and Ogwari, Paul and Thiel, Andrew and Ferrer, Fernando and Woelfel, Isaac and Chang, Jefferson C and Darold, Amberlee P and Holland, Austin A},
+  journal={Seismological Research Letters},
+  volume={91},
+  number={2A},
+  pages={611--621},
+  year={2020},
+  publisher={Seismological Society of America}
+}
+
+@misc{OklahomaCorporationCommission,
+  author = {OklahomaCorporationCommission},
+  year = {2021},
+  url = {https://spatialreference.org/ref/epsg/wgs-84/},
+  title = {Oil and Gas Data Files}
+}
