--- a/report/references.bib
+++ b/report/references.bib
@@ -155,3 +155,96 @@
   url = {https://spatialreference.org/ref/epsg/wgs-84/},
   title = {Oil and Gas Data Files}
 }
+
+@book{chhikara1988inverse,
+  title={The Inverse Gaussian Distribution: Theory: Methodology, and Applications},
+  author={Chhikara, Raj},
+  volume={95},
+  year={1988},
+  publisher={CRC Press}
+}
+
+@misc{FracFocusChemicalDisclosureRegistry,
+  author = {Frac Focus Chemical Disclosure Registry},
+  year = {2021},
+  url = {https://fracfocus.org/data-download},
+  title = {Data Download}
+}
+
+@article{jordahl2014geopandas,
+  title={GeoPandas: Python tools for geographic data},
+  author={Jordahl, K},
+  journal={URL: https://github. com/geopandas/geopandas},
+  year={2014}
+}
+
+@Article{Hunter:2007,
+  Author    = {Hunter, J. D.},
+  Title     = {Matplotlib: A 2D graphics environment},
+  Journal   = {Computing in Science \& Engineering},
+  Volume    = {9},
+  Number    = {3},
+  Pages     = {90--95},
+  abstract  = {Matplotlib is a 2D graphics package used for Python for
+  application development, interactive scripting, and publication-quality
+  image generation across user interfaces and operating systems.},
+  publisher = {IEEE COMPUTER SOC},
+  doi       = {10.1109/MCSE.2007.55},
+  year      = 2007
+}
+
+@article{ioannidis2018proposal,
+  title={The proposal to lower P value thresholds to. 005},
+  author={Ioannidis, John PA},
+  journal={Jama},
+  volume={319},
+  number={14},
+  pages={1429--1430},
+  year={2018},
+  publisher={American Medical Association}
+}
+
+
+@inproceedings{lundberg2017unified,
+  title={A unified approach to interpreting model predictions},
+  author={Lundberg, Scott M and Lee, Su-In},
+  booktitle={Proceedings of the 31st international conference on neural information processing systems},
+  pages={4768--4777},
+  year={2017}
+}
+
+@inproceedings{shrikumar2017learning,
+  title={Learning important features through propagating activation differences},
+  author={Shrikumar, Avanti and Greenside, Peyton and Kundaje, Anshul},
+  booktitle={International Conference on Machine Learning},
+  pages={3145--3153},
+  year={2017},
+  organization={PMLR}
+}
+
+@misc{wandb,
+title = {Experiment Tracking with Weights and Biases},
+year = {2020},
+note = {Software available from wandb.com},
+url={https://www.wandb.com/},
+author = {Biewald, Lukas},
+}
+
+@incollection{benesty2009pearson,
+  title={Pearson correlation coefficient},
+  author={Benesty, Jacob and Chen, Jingdong and Huang, Yiteng and Cohen, Israel},
+  booktitle={Noise reduction in speech processing},
+  pages={1--4},
+  year={2009},
+  publisher={Springer}
+}
+
+@inproceedings{dunne1997pairing,
+  title={On the pairing of the softmax activation and cross-entropy penalty functions and the derivation of the softmax activation function},
+  author={Dunne, Rob A and Campbell, Norm A},
+  booktitle={Proc. 8th Aust. Conf. on the Neural Networks, Melbourne},
+  volume={181},
+  pages={185},
+  year={1997},
+  organization={Citeseer}
+}
